tests/baselines/reference/iteratorSpreadInCall7.errors.txt
tests/cases/conformance/es6/spread/iteratorSpreadInCall7.ts(28,8): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/es6/spread/iteratorSpreadInCall7.ts(28,31): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/spread/iteratorSpreadInCall7.ts (2 errors) ====
    function foo<T>(...s: T[]) { return s[0]; }
    class SymbolIterator {
        next() {
            return {
                value: Symbol(),
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    class StringIterator {
        next() {
            return {
                value: "",
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    foo(...new SymbolIterator, ...new StringIterator);
           ~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
                                  ~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.